added portfolio link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="https://github.com/cng885/portfolio">Portfolio</a>
             <a href="https://www.linkedin.com/in/chase-ginther-bb9834b6">Linkedin</a>
           </nav>
         </header>
